Decouple metadata sync from enrichment
